# CMU-VLA-Challenge

./: .gitignore  PLAN_GPU_REBUILD.md  launch_module.sh  report.md  調査結果
ai_module/src/uiap_ogn_ros/: CMakeLists.txt  package.xml  setup.py
ai_module/src/uiap_ogn_ros/config/: params.yaml
ai_module/src/uiap_ogn_ros/launch/: uiap_ogn.launch
ai_module/src/uiap_ogn_ros/scripts/: launch_vlm_servers_nohup.sh  policy_node.py  question_router.py
ai_module/src/uiap_ogn_ros/src/uiap_ogn_ros/: __init__.py  observation_bridge.py  policy_node.py  question_router.py
